<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/game_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Shifumi.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Shifumi.PopupOverlay" >
            <ImageButton
                android:id="@+id/game_toolbar_go_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minWidth="50dp"
                android:contentDescription="@string/game_toolbar_back_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_baseline_arrow_back_24"/>

            <TextView
                android:id="@+id/game_toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/TextAppearance.AppCompat.Title"
                android:text="@string/play_match"/>
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/game_scores_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/game_scores"
        app:layout_constraintTop_toBottomOf="@id/game_toolbar"/>

    <TextView
        android:id="@+id/game_score_first"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/design_default_color_primary"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="26sp"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toTopOf="@id/game_scores_first_title"
        app:layout_constraintTop_toBottomOf="@id/game_scores_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/game_score_second"
        tools:text="0"/>

    <TextView
        android:id="@+id/game_score_second"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/design_default_color_on_primary"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="26sp"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/game_scores_title"
        app:layout_constraintBottom_toTopOf="@id/game_scores_second_title"
        app:layout_constraintStart_toEndOf="@id/game_score_first"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="0"/>

    <TextView
        android:id="@+id/game_scores_first_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintTop_toBottomOf="@id/game_score_first"
        app:layout_constraintBottom_toTopOf="@id/game_score_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/game_scores_second_title"/>

    <TextView
        android:id="@+id/game_scores_second_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/game_computer"
        android:gravity="center"
        android:padding="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:background="@color/design_default_color_primary"
        android:textColor="@color/design_default_color_on_primary"
        app:layout_constraintTop_toBottomOf="@id/game_score_second"
        app:layout_constraintBottom_toTopOf="@id/game_score_guideline"
        app:layout_constraintStart_toEndOf="@id/game_scores_first_title"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/game_score_guideline"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/game_hand_first"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/game_score_guideline"
        app:layout_constraintBottom_toTopOf="@id/game_actions_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/game_hand_second"
        tools:src="@drawable/ic_paper"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/game_hand_second"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@id/game_score_guideline"
        app:layout_constraintBottom_toTopOf="@id/game_actions_guideline"
        app:layout_constraintStart_toEndOf="@id/game_hand_first"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/ic_rock"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/game_actions_guideline"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="150dp" />

    <TextView
        android:id="@+id/game_actions_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_actions_helper"
        app:layout_constraintTop_toBottomOf="@id/game_actions_guideline"/>

    <ImageButton
        android:id="@+id/game_play_rock"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:padding="8dp"
        android:visibility="gone"
        android:src="@drawable/ic_rock"
        android:contentDescription="@string/game_actions_rock_content"
        app:layout_constraintTop_toBottomOf="@id/game_actions_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/game_play_paper"/>

    <ImageButton
        android:id="@+id/game_play_paper"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:padding="8dp"
        android:visibility="gone"
        android:contentDescription="@string/game_actions_paper_content"
        android:src="@drawable/ic_paper"
        app:layout_constraintTop_toBottomOf="@id/game_actions_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/game_play_rock"
        app:layout_constraintEnd_toStartOf="@id/game_play_scissors"/>

    <ImageButton
        android:id="@+id/game_play_scissors"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:padding="8dp"
        android:visibility="gone"
        android:contentDescription="@string/game_actions_scissors_content"
        android:src="@drawable/ic_scissors"
        app:layout_constraintTop_toBottomOf="@id/game_actions_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/game_play_paper"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/game_play_computer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:visibility="gone"
        android:text="@string/game_computer_match"
        android:textColor="@color/design_default_color_on_primary"
        android:backgroundTint="@color/design_default_color_primary"
        app:layout_constraintTop_toBottomOf="@id/game_actions_guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>