...
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/home_icon" />

    <Button
        android:id="@+id/home_play_human"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="16dp"
        android:text="@string/play_match"
        app:layout_constraintBottom_toTopOf="@id/home_play_computer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/home_title" />

    <Button
        android:id="@+id/home_play_computer"
...
